@@ -861,6 +861,8 @@ typedef struct hc_device_param
   u32     kernel_accel;
   u32     kernel_loops_min;
   u32     kernel_loops_max;
+  u32     kernel_loops_min_sav; // the _sav are required because each -i iteration
+  u32     kernel_loops_max_sav; // needs to recalculate the kernel_loops_min/max based on the current amplifier count
   u32     kernel_accel_min;
   u32     kernel_accel_max;
   u32     kernel_power;
